# mimyo-comfyui

./: .gitignore  Dockerfile  Dockerfile.anime  Dockerfile.real  deploy.sh  s3_model_check.sh  s3_model_sync.sh
datasets/: README.md  _index.json
datasets/_scripts/curate/: README.md  pyproject.toml
datasets/_scripts/curate/mimyo_curate/: __init__.py  __main__.py  caption.py  curate.py  dedup.py  face.py  face_check.py  finalize.py  paths.py  probe.py  report.py
datasets/faces/synth_aria/v1/: README.md  manifest.json
datasets/faces/synth_aria/v1/_example/: README.md  _generate_placeholders.py  captions.example.jsonl  manifest.private.example.json
datasets/faces/synth_aria/v1/_example/curated/1024/: 0003_park-fullbody.txt
datasets/faces/synth_aria/v1/_example/curated/1280/: 0001_frontal-portrait.txt  0002_cafe-threequarter.txt  0004_bookstore-laugh.txt  0006_kitchen-cooking.txt
datasets/faces/synth_aria/v1/_example/curated/1536/: 0005_studio-neutral.txt
src/: start.sh
trainer/: .env.example  Dockerfile.train  README.md  entrypoint.sh
trainer/configs/: zimage-face-lokr-smoke.yaml  zimage-face-lokr.yaml  zimage-face-lora-fallback.yaml
trainer/scripts/: launch.ts  list-runs.ts  mirror-base.sh  promote.ts
vlm/florence2-promptgen/: download-model.sh
vlm/qwen3-vl-caption-it/: Dockerfile  README.md  deploy.sh  download-model.sh  smoke.sh
workflows/: image-to-image.json
